# openGCAS

./: .gitignore  404.html  CMakeLists.txt  Dockerfile  LICENSE.html  Makefile  Makefile.am  MakefileDocs  MakefileOrig  Pipfile  PolySelect.cpp  PolySelect.h  README  README.md  certification.html  code_of_conduct.html  configure.ac  contributing.html  data_access.html  gcas_details.html  gcas_introduction.html  index.html  intro_to_gcas.html  main.cpp  mkdocs.yml  priorities.html  raster_query_system.html  release_history.html  release_notes.html  rta.html  sitemap.xml
.github/workflows/: README.md  build.yml  documentation.yml
LICENSE/: index.html
certification/: index.html
code_of_conduct/: index.html
contributing/: index.html
cpp_src/: main.cpp
cpp_src/rqs/: raster_query.cpp  rqs_datablock.cpp  structs.cpp
cpp_test/: CMakeLists.txt  raster_test.cpp
data_access/: index.html
dependencies/: CMakeLists.txt
docs/: LICENSE.md  README.md  best_practises_cpp.md  best_practises_software_development.md  certification.md  code_of_conduct.md  contributing.md  data_access.md  gcas_details.md  gcas_introduction.md  index.md  intro_to_gcas.md  license.md  priorities.md  raster_query_system.md  release_history.md  release_notes.md  rta.md
docs/arc/: data_access.md  raster_query_system.md
etc/output_vis/: 2bitmap.pgm  4bitmap.pgm
etc/scripts/: pgmtopng.py
gcas_details/: index.html
gcas_introduction/: index.html
include/: CircSelect.h  PolySelect.h  Raster.h  RasterQuery.h  structs.h
intro_to_gcas/: index.html
libs/: rasterio-1.2.10-cp310-cp310-win32.whl
priorities/: index.html
raster_query_system/: index.html
release_history/: index.html
release_notes/: index.html
rta/: index.html
search/: search_index.json
src/: CircSelect.cpp  PolySelect.cpp  Raster.cpp  RasterQuery.cpp  main.cpp  setup.py
src/open_gcas/: __init__.py
src/rqs/: RasterQuery.cpp  RasterQuery.h  raster_query.cpp  rqs.h  rqsDataBlock.cpp  rqs_datablock.cpp  sfml_front.cpp  sfml_front.h  structs.h
test/: CMakeLists.txt  rasterSingletonTest.cpp
tests/: CMakeLists.txt  main.cpp  raster_test.cpp  rqs_test.cpp  singleton_raster_test.cpp
